# widget

./: README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
project_New_viget/: pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: test_masks.py  test_masks_card_number.py  test_processing.py  test_widget.py
